[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xnoxs-dork"
version = "1.0.0"
description = "SQL Injection Vulnerability Scanner for security research"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "xnoxs"}
]
keywords = [
    "security",
    "sql-injection",
    "sqli",
    "vulnerability-scanner",
    "pentesting",
    "security-research",
    "termux"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "xnoxs-engine>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
publish = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
xnoxs-dork = "xnoxs_dork:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
